--- a/src/components/Main/Natureza_main.module.css
+++ b/src/components/Main/Natureza_main.module.css
@@ -35,9 +35,37 @@ main{
   z-index: 1;
 }
 
-.paragraph{
+.paragraphContainer{
+  position: relative;
   width: 200px;
   z-index: 1;
-  
+  background: radial-gradient(rgba(25, 202, 99, 0.1), rgba(25, 202, 99, 0.2), rgba(25, 202, 99, 0.3));
+  border-radius: 20px;
+  padding: 20px;
 }
 
+.paragraphContainer::before{
+  content: "";
+  position: absolute;
+  inset: 3px;
+  border-radius: 17px;
+  background: rgba(87, 138, 102, 0.3);
+  z-index: -1;
+}
+
+.hexagono{
+  width: 300px;
+  height: 300px;
+  background: blue;
+  background-image: url('./src/assets/e055058303652c0ba420b6cfc5274cde.jpg');
+  clip-path: polygon(
+    50% 0%,
+    100% 25%,
+    100% 75%,
+    50% 100%,
+    0% 75%,
+    0% 25%
+  );
+  background-position: center;
+  background-size: cover;
+}
