--- a/src/components/Main/Natureza_main.module.css
+++ b/src/components/Main/Natureza_main.module.css
@@ -17,13 +17,32 @@ main{
   height: 100%;
 }
 
+.titleContainer{
+  width: 500px;
+  height: 520px;
+  background: radial-gradient(rgba(124, 57, 18, 0.4), rgba(0, 128, 0, 0.4), rgba(5, 114, 47, 0.7));
+  clip-path: polygon(
+    50% 0%,
+    100% 25%,
+    100% 75%,
+    50% 100%,
+    0% 75%,
+    0% 25%
+  );
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+}
+
 .title{
-  font-size: 100px;
+  font-size: 70px;
   z-index: 1;
 }
 
 .subTitle{
-  font-size: 40px;
+  font-size: 30px;
   z-index: 1;
 }
 
@@ -38,10 +57,19 @@ main{
 .paragraphContainer{
   position: relative;
   width: 200px;
+  height: 300px;
   z-index: 1;
   background: radial-gradient(rgba(25, 202, 99, 0.1), rgba(25, 202, 99, 0.2), rgba(25, 202, 99, 0.3));
   border-radius: 20px;
   padding: 20px;
+  clip-path: polygon(
+    50% 0%,
+    100% 25%,
+    100% 75%,
+    50% 100%,
+    0% 75%,
+    0% 25%
+  );
 }
 
 .paragraphContainer::before{
@@ -53,11 +81,11 @@ main{
   z-index: -1;
 }
 
-.hexagono{
-  width: 300px;
-  height: 300px;
-  background: blue;
-  background-image: url('./src/assets/e055058303652c0ba420b6cfc5274cde.jpg');
+.hexagono{ 
+  position: absolute;
+  width: 200px;
+  height: 220px;
+  
   clip-path: polygon(
     50% 0%,
     100% 25%,
@@ -68,4 +96,33 @@ main{
   );
   background-position: center;
   background-size: cover;
+  transition: ease 0.4s;
+}
+ .hexagono:hover{
+  transform: scale(1.05);
+ }
+
+.hex1{
+  background-image: url('./src/assets/e055058303652c0ba420b6cfc5274cde.jpg');
+  top: 2%;
+  left: 2%;
+}
+
+.hex2{
+  background-image: url('./src/assets/b40c7dba95aeafeb88b54a840b172971.jpg');
+  top: 20%;
+  left: 10%;
+}
+.hex3{
+  background-image: url('./src/assets/b40c7dba95aeafeb88b54a840b172971.jpg');
+  transform: scale(2);
+  top: -13%;
+  right: -3%;
+
+}
+.hex4{
+  background-image: url('./src/assets/b40c7dba95aeafeb88b54a840b172971.jpg');
+  top: 38%;
+  left: 2%;
+
 }
