--- a/src/components/Hero/Minimalista_hero.module.css
+++ b/src/components/Hero/Minimalista_hero.module.css
@@ -3,17 +3,17 @@
   gap: 200px;
   padding: 40px;
   z-index: 1;
-  background-color: rgba(26, 126, 1, 1);
+  background-color:  rgba(5, 114, 47, 1);
 }
 
 .paragraphContainer{
   position: relative;
-  width: 200px;
-  height: 300px;
+  width: 450px;
+  height: 1000px;
   z-index: 1;
-  background: radial-gradient(rgba(25, 190, 202, 0.1), rgba(58, 58, 58, 0.2), rgba(134, 134, 134, 0.3));
+  background: radial-gradient(rgb(0, 0, 0), rgba(97, 97, 97, 1), rgba(255, 255, 255, 1));
   border-radius: 20px;
-  padding: 20px;
+  padding: 250px 20px;
   clip-path: polygon(
     50% 0%,
     100% 25%,
@@ -22,6 +22,7 @@
     0% 75%,
     0% 25%
   );
+  
 }
 
 .paragraphContainer::before{
