--- a/src/components/Hero/Minimalista_hero.module.css
+++ b/src/components/Hero/Minimalista_hero.module.css
@@ -1,19 +1,25 @@
 .container{
   position: relative;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   padding: 40px;
   z-index: 1;
-  background-color:  rgba(5, 114, 47, 1);
+  /* background-color:  rgba(5, 114, 47, 1); */
+  background: linear-gradient(rgb(171, 174, 177) ,rgba(5, 114, 47, 1) 30%);
+  height: 2000px;
 }
 
 .paragraphContainer{
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: relative;
-  width: 450px;
-  height: 1000px;
+  width: 900px;
+  height: 300px;
   z-index: 1;
-  background: radial-gradient(rgb(0, 0, 0), rgba(97, 97, 97, 1), rgba(255, 255, 255, 1));
+  background:  rgba(255, 255, 255, 1);
   border-radius: 20px;
   padding: 250px 20px;
   clip-path: polygon(
@@ -27,11 +33,6 @@
   
 }
 
-.paragraphContainer::before{
-  content: "";
-  position: absolute;
-  inset: 3px;
-  border-radius: 17px;
-  background: rgba(87, 138, 102, 0.3);
-  z-index: -1;
+h1{
+ color: black;  
 }
