--- a/src/components/HiveMenu/HiveMenu.module.css
+++ b/src/components/HiveMenu/HiveMenu.module.css
@@ -2,16 +2,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
   position: relative;
   width: 600px;
   height: 600px;
-  /* transform: translate(-50%, -50%); */
+  transform: translate(0%, 50%);
 }
 
 .hex {
-  width: 200px;
-  height: 200px;
+  width: 300px;
+  height: 300px;
   background: teal;
   clip-path: polygon(
     50% 0%,
@@ -32,16 +31,28 @@
 
 
 .center {
-  top: 50%;
-  left: 50%;
-  /* transform: translate(-50%, -50%); */
+  width: 100px;
+  height: 100px;
+  clip-path: polygon(
+    50% 0%,
+    100% 25%,
+    100% 75%,
+    50% 100%,
+    0% 75%,
+    0% 25%
+  );
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: black;
+  cursor: pointer;
+  position: absolute;
+  font-family: 'Lora', sans-serif;
   z-index: 10;
   background: white;
 }
 
-.item {
-  top: 50%;
-  left: 50%;
+.item {  
   background: black;
   transform: none;
   color: white;
