--- a/src/components/Main/Minimalista_main.module.css
+++ b/src/components/Main/Minimalista_main.module.css
@@ -16,7 +16,7 @@ main{
 
 .tint{
   position: absolute;
-  background: linear-gradient(rgba(92, 100, 90, 0.5) 50%, rgba(92, 100, 90, 0.5) 80%,  rgba(5, 114, 47, 0.7) 99%);
+  /* background: linear-gradient(rgba(92, 100, 90, 0.5) 50%, rgba(92, 100, 90, 0.5) 80%,  rgba(5, 114, 47, 0.7) 99%); */
   width: 100%;
   height: 100%;
 }
