--- a/src/components/Hero/Minimalista_hero.module.css
+++ b/src/components/Hero/Minimalista_hero.module.css
@@ -19,7 +19,7 @@
   width: 900px;
   height: 300px;
   z-index: 1;
-  background:  rgba(255, 255, 255, 1);
+  /* background:  rgba(255, 255, 255, 1);
   border-radius: 20px;
   padding: 250px 20px;
   clip-path: polygon(
@@ -29,7 +29,7 @@
     50% 100%,
     0% 75%,
     0% 25%
-  );
+  ); */
   
 }
 
